* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated a URL in the README.md

* Wed Feb 20 2019 Adam Yohring <adam.yohrling@onyxpoint.com> - 6.1.1-0
- Modified class to support configuring SIMP rsync server and SIMP
  rsync client for same machine
- Combine `rsync::server::global` with `rsync::server`
- Add ability to use ports in rsync_server parameter

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Fixed a template bug that prevented catalogue compilation when
  rsync::server::section::user_pass was set
- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
  Puppet 3 function.

* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`
- Update badges and contribution guide URL in README.md

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Drop Hiera 4 support

* Tue May 08 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.0.6-0
- Add `order => 'numeric'` setting to concat for rsyncd.conf
- Add support for Puppet 5
- Add support for and OEL

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.5-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Update puppet dependency in metadata.json

* Wed Mar 29 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Ensure that rsync password files are not echoed to the Puppet log

* Thu Mar 17 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Remove OBE 'pe' requirement from metadata.json
- Update puppet version in .travis.yaml

* Wed Mar 8 2017 Dylan Cochran <heliocentric@gmail.com> - 6.0.1-0