@@ -1,0 +1,29 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.rsync.server.global.address:
+    settings:
+      parameter: rsync::server::global::address
+      value: 127.0.0.1
+    type: puppet-class-parameter
+    controls:
+      nist_800_53_rev4:CM-7: true
+    identifiers:
+      nist_800_53_rev4:
+      - CM-7
+  oval:com.puppet.forge.simp.rsync.server.stunnel:
+    settings:
+      parameter: rsync::server::stunnel
+      value: true
+    type: puppet-class-parameter
+    controls:
+      nist_800_53_rev4:SC-8: true
+      nist_800_53_rev4:SC-8:1: true
+      nist_800_53_rev4:SC-8:2: true
+      nist_800_53_rev4:SC-23: true
+    identifiers:
+      nist_800_53_rev4:
+      - SC-8
+      - SC-8:1
+      - SC-8:2
+      - SC-23
